--- a/ProyectoLab5/src/Acueducto/AcueductoUI.form
+++ b/ProyectoLab5/src/Acueducto/AcueductoUI.form
@@ -426,7 +426,7 @@
                           <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="511" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
